@@ -36,3 +36,5 @@
 
 # 20240509
 - Channel Moderator Removal draft (Need to test)
+- Fix channel moderaetor setting function
+- Silent the mentions in the failed removal
